--- a/Lesson2/Classwork/classwork.html
+++ b/Lesson2/Classwork/classwork.html
@@ -8,6 +8,9 @@
     <title>Classwork</title>
 </head>
 <body>
-<script src="classwork.js"></script>
+<script>
+
+</script>
+<!--<script src="classwork.js"></script>-->
 </body>
 </html>
