--- a/Lesson3/Homework/homework3.html
+++ b/Lesson3/Homework/homework3.html
@@ -5,18 +5,11 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Classwork</title>
+    <title>Homework3</title>
 </head>
 <body>
-<script>
-    let obj = {key1: 'value1', key2: 'value2'}
-    console.log(obj['key1'], obj.key2)
-    for (const key in obj) {
-        console.log(obj[key])
-    }
-
-</script>
-
-<!--<script src="classwork.js"></script>-->
+<script src = 'homework3.js'></script>
 </body>
 </html>
+
+
