--- a/Lesson2/Classwork/classwork.html
+++ b/Lesson2/Classwork/classwork.html
@@ -8,9 +8,7 @@
     <title>Classwork</title>
 </head>
 <body>
-<script>
 
-</script>
-<!--<script src="classwork.js"></script>-->
+<script src="classwork.js"></script>
 </body>
 </html>
