--- a/Lesson3/Classwork/classwork1.html
+++ b/Lesson3/Classwork/classwork1.html
@@ -47,14 +47,14 @@
 
 <!--template 2.1-->
 <div>
-    NAME- SURNAME- AGE- INFO- <img src="PHOTO" alt="">
+    NAME- SURNAME- AGE- INFO- <img src="PHOTO" alt="PHOTO">
 </div>
 
 <!--template 2.2-->
 <div>
     <h2>NAME SURNAME. age is - AGE</h2>
     <p>INFO</p>
-    <img src="PHOTO" alt="">
+    <img src="PHOTO" alt="PHOTO">
 </div>
 <!--
 інші об'єкти з масиву
@@ -68,7 +68,7 @@
     <div>
         <h2>NAME SURNAME. age is - AGE</h2>
         <p>INFO</p>
-        <img src="PHOTO" alt="">
+        <img src="PHOTO" alt="PHOTO">
     </div>
     <!--
 інші об'єкти з масиву
@@ -89,7 +89,7 @@
 <div class="wrapper">
     <div class="product-card">
         <h3 class="product-title">TITLE. Price - PRICE</h3>
-        <img src="" alt="" class="product-image">
+        <img src="" alt="PHOTO" class="product-image">
     </div>
     <!--
                 інші об'єкти з масиву
