--- a/Lesson9/Classwork9/classwork9.html
+++ b/Lesson9/Classwork9/classwork9.html
@@ -6,6 +6,34 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Classwork9</title>
+    <style>
+        *{box-sizing: border-box;}
+        .course {
+            display: flex;
+            flex-direction: column;
+            border: 1px solid black;
+            column-gap: 20px;
+        }
+
+        .course > div{
+            width: 100%;
+        }
+        .div-title{
+            padding: 10px;
+        }
+        .wrapper-md-hd{
+            display: flex;
+            justify-content: space-between;
+
+        }
+        .wrapper-md-hd p{text-align: center;}
+        .wrapper-md-hd > div{
+            border: 1px solid black;
+        }
+.md{width: 25%}
+.hd{width: 75%}
+
+    </style>
 
 </head>
 <body>
