--- a/Lesson10/Homework10/homework10.html
+++ b/Lesson10/Homework10/homework10.html
@@ -46,6 +46,9 @@
         .toggle {
             top: 24px;
         }
+        .toggle-comments{
+            display: none;
+        }
         .comment{
             display: flex;
             flex-direction: column;
