--- a/Lesson10/Additional10/additional10.html
+++ b/Lesson10/Additional10/additional10.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Additional 10</title>
     <style>
+        button{font-size: 20px}
         .container {
             position: relative;
         }
