--- a/Lesson10/Additional10/additional10.html
+++ b/Lesson10/Additional10/additional10.html
@@ -66,6 +66,7 @@
             height: 400px;
             background-size: 600px 400px;
             background-repeat: no-repeat;
+            transition: 0.5s;
         }
 
         .arrows {
