--- a/Lesson10/Additional10/additional10.html
+++ b/Lesson10/Additional10/additional10.html
@@ -53,6 +53,11 @@
             top: 100px;
             height: fit-content;
         }
+        .main, .main div{
+            border: 1px solid red;
+            padding: 5px;
+        }
+
 
         .carousel {
             width: 600px;
