--- a/Lesson10/Additional10/additional10.html
+++ b/Lesson10/Additional10/additional10.html
@@ -124,6 +124,9 @@
         .boolet-active{
             background-color: black;
         }
+        .active-rec{
+            background-color: red;
+        }
     </style>
 
 </head>
@@ -141,8 +144,7 @@
     </form>
     <div class="carousel">
         <div class="img-block"></div>
-        <div class="boolets">
-        </div>
+        <div class="boolets"></div>
         <div class="arrows">
             <div class="arrow arrow-left"></div>
             <div class="arrow arrow-right"></div>
