--- a/Lesson12/Additional12/additional12.html
+++ b/Lesson12/Additional12/additional12.html
@@ -5,16 +5,12 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Classwork12</title>
+    <title>Additional 12</title>
     <style>
         * {
             font-size: 18px;
         }
-        div{
-            border: 1px solid darkgrey;
-            padding: 10px;
-        }
-
+div { border: 1px solid darkgrey;}
         .container {
             display: grid;
             grid-template-columns: repeat(5, minmax(50px, 1fr));
@@ -22,15 +18,17 @@
             gap: 10px;
         }
 
-        .post{
+        .user{
             display: flex;
             flex-direction: column;
             row-gap: 10px;
+
+            padding: 10px;
         }
 
     </style>
 </head>
 <body>
-<script src="classwork12.js"></script>
+<script src="additional12.js"></script>
 </body>
 </html>
