--- a/Lesson12/Additional12/additional12.html
+++ b/Lesson12/Additional12/additional12.html
@@ -10,20 +10,21 @@
         * {
             font-size: 18px;
         }
-div { border: 1px solid darkgrey;}
+div {
+    border: 1px solid cadetblue;
+    padding: 10px;
+}
         .container {
             display: grid;
             grid-template-columns: repeat(5, minmax(50px, 1fr));
             grid-template-rows: auto;
-            gap: 10px;
+            gap: 5px;
         }
 
         .user{
             display: flex;
             flex-direction: column;
             row-gap: 10px;
-
-            padding: 10px;
         }
 
     </style>
