--- a/EXTRA/test.html
+++ b/EXTRA/test.html
@@ -644,6 +644,20 @@
     console.log(arrFinal.at(-1)); //возвращает последний элемент массива, arrFinal.at(0) - вернет 3, т.е. первый элемент массива
     console.log(arrFinal[arrFinal.length - 1]);
 
+    /*Метод assign для объектов*/
+    /*Метод Object.assign () копирует все перечисляемые собственные свойства из одного или нескольких исходных объектов (source) в целевой объект.
+    Он возвращает измененный целевой (target) объект.
+
+     */
+    const target = {a: 1, b: 2};
+    const source = {b: 4, c: 5};
+    const returnedTarget = Object.assign(target, source);
+    console.log(target);
+    // expected output: Object { a: 1, b: 4, c: 5 }
+    console.log(returnedTarget);
+    // expected output: Object { a: 1, b: 4, c: 5 }
+
+
     /*Типы patternov - повторяемая архитектурная конструкция(концепция), представляющая собой решение проблемы проектированая в рамках некоторого часто возникающего контекста*/
     /*
     Пример: MVC - module vue controller - определяет поведение и структуру всего проекта
@@ -673,6 +687,36 @@
     State (используется для организации роутинга),
     Strategy,
     Template
+     */
+    /*SOLID*/
+    /*
+    S - Single Responsibility Principle,
+    O - Open Close Principle,
+    L - Liskov Substitutional Principle,
+    I - Interface Segregation Principle,
+    D - Dependency Inversion Principle
+     */
+    /* S
+   Единичная ответственность принцип. По мере роста приложения требуется больше функционала.
+   Какому-то классу нужно добавлять новый функционал, который будет смешивать его изначальное поведение.
+   И это будет не соответствовать данному принципу, т.к. данный принцип говорит, что если есть какое-то другое поведение,
+   то его нужно вынести в отдельный класс.
+
+   O
+   Какие-то классы, которые мы создаем, должны быть открыты для расширения, но закрыты для модификации. Мы должны проэктировать
+   наши классы таким образом, чтобы, если даже появятся какие-то новые кейсы, чтобы не модифицировать старый код, а он уже был спроектирован
+   таким образом, чтобы, даже, если приносите что-то новое, вы не меняете свой старый код.
+
+   L
+   Функции, которые используют базовый тип, они должны уметь с ним взоимодействовать + взаимодействовать с подтипами данного базового типа
+   незная ничего про это.
+
+   I
+   Те классы, которые наследуются от базового класса, если они не используют методы базового класса, то они не должны от них зависеть.
+
+    D
+    Верхний уровень модулей не должен зависеть от абстракций нижнего уровня. Любые уровни должны зависеть от абстракций, но не от конкретики.
+    Мы инверсируем зависимости. Такую концепцию использует Angular в своем ядре.
      */
     /*Soft, Epam, Elex*/
     /*refactoring.guru*/
